--- a/tests/subsys/pm/power_domain/prj.conf
+++ b/tests/subsys/pm/power_domain/prj.conf
@@ -6,3 +6,5 @@ CONFIG_PM_DEVICE_POWER_DOMAIN_DYNAMIC=y
 CONFIG_PM_DEVICE_RUNTIME=y
 CONFIG_MP_MAX_NUM_CPUS=1
 CONFIG_ZTEST_NEW_API=y
+
+CONFIG_DEBUG=y
