--- a/boards/arm/nucleo_wl55jc/nucleo_wl55jc.dts
+++ b/boards/arm/nucleo_wl55jc/nucleo_wl55jc.dts
@@ -169,7 +169,8 @@
 	status = "okay";
 	lora: radio@0 {
 		status = "okay";
-		tx-enable-gpios = <&gpioc 4 GPIO_ACTIVE_LOW>; /* FE_CTRL1 */
+		/* antenna-enable-gpios = <&gpioc 3 GPIO_ACTIVE_HIGH>; /* FE_CTRL3 */
+		/* tx-enable-gpios = <&gpioc 4 GPIO_ACTIVE_LOW>; /* FE_CTRL1 */
 		rx-enable-gpios = <&gpioc 5 GPIO_ACTIVE_LOW>; /* FE_CTRL2 */
 		dio3-tcxo-voltage = <SX126X_DIO3_TCXO_1V7>;
 		tcxo-power-startup-delay-ms = <5>;
@@ -178,7 +179,7 @@
 		 * output would require both FE_CTRL1 and FE_CTRL2 to be high,
 		 * which is not currently supported by the driver.
 		 */
-		power-amplifier-output = "rfo-hp";
+		power-amplifier-output = "rfo-lp";
 		rfo-lp-max-power = <15>;
 		rfo-hp-max-power = <22>;
 	};
